force-app/main/default/objects/Detalhe_da_Conta__c/Detalhe_da_Conta__c.object-meta.xml
<CustomObject>
    <label>Detalhamento da Conta</label>
    <nameField>
        <displayFormat>Reg. {000000}</displayFormat>
        <label>N° de Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detalhamento da Conta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>