force-app/main/default/objects/Detalhe_da_Conta__c/fields/Chefe_Respons_vel_do_Setor__c.field-meta.xml
<CustomField>
    <fullName>Chefe_Respons_vel_do_Setor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chefe/Responsável do Setor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Conta_relacionada__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Detalhamento da Conta</relationshipLabel>
    <relationshipName>Detalhes_da_Conta</relationshipName>
    <type>Lookup</type>
</CustomField>