force-app/main/default/objects/Detalhe_da_Conta__c/fields/Conta_relacionada__c.field-meta.xml
<CustomField>
    <fullName>Conta_relacionada__c</fullName>
    <label>Conta relacionada</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Detalhes_da_Conta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>