force-app/main/default/objects/Detalhe_da_Conta__c/fields/Tipo_de_Leito__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Leito__c</fullName>
    <label>Tipo de Leito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UTI ADULTO</fullName>
            </value>
            <value>
                <fullName>UTI NEONATAL</fullName>
            </value>
            <value>
                <fullName>EMERGÊNCIA</fullName>
            </value>
            <value>
                <fullName>SALA CIRURGICA</fullName>
            </value>
            <value>
                <fullName>RPA</fullName>
                <isActive>false</isActive>
                <label>RPA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>